Fixes issue with hr elements being too dark

--- a/sass/copy.scss
+++ b/sass/copy.scss
@@ -80,8 +80,10 @@ small {
 }
 
 hr {
+	border: 0;
 	border-color: $lighter-gray;
-	border-width: 1px 0 0 0; 
+	border-top-width: 1px;
+	border-top-style: solid;
 }
 
 pre {
